modificando la cabecera

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     </head>
     <body>
         <header>
-          <nav></nav>
-        </header>
+          <h1>GILEOTO</h1>
 
-        <section>
-          <article></article>
-          <article></article>
-          <article></article>
-        </section>
+          <p>En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza.</p>
+
+          <p>Todos los datos han sido obtenidos de la web del Ayuntamiento de Zaragoza.</p>
+
+        </header>
 
         <footer>
 
