--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     <body>
         <header>
 
-          <h1 class="txt-color title-size margin-y0">Bislai</h1>
+          <h1 class="txt-color title-size margin-y0 bold">Bislai</h1>
           <p class="bold">Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span>
+
+
+
+          <div class="compartir">
+                      <a class="compartir-twitter" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Twitter</a>
+                      <a class="compartir-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Facebook</a>
+                  </div>
 
         </header>
 
