--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
         <footer>
 
         </footer>
+
+        <script type="text/javascript" src="js/Chart.min.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
