--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 
           <div class="compartir">
-                      <a class="compartir-twitter" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Twitter</a>
-                      <a class="compartir-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Facebook</a>
+                      <a class="compartir-twitter" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Comparte Bislai en Twitter</a>
+                      <a class="compartir-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Comparte Bislai en Facebook</a>
                   </div>
 
         </header>
