--- a/index.html
+++ b/index.html
@@ -1,39 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
-    </head>
-    <body>
-        <header>
 
-          <h1 class="txt-color title-size margin-y0 bold">Bislai</h1>
-          <p class="bold">Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
 
-
-
-          <div class="compartir">
-                      <a class="compartir-twitter" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Comparte Bislai en Twitter</a>
-                      <a class="compartir-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Comparte Bislai en Facebook</a>
-                  </div>
-
-        </header>
-
-        <section>
-          <article></article>
-          <article></article>
-          <article></article>
-        </section>
-
-        <footer>
-
-        </footer>
-
-        <script type="text/javascript" src="js/Chart.min.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-    </body>
+<body>
+    <header>
+        <h1 class="txt-color  title-size  margin-y0  bold">Bislai</h1>
+        <p class="bold">Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span>
+        <div class="compartir">
+            <a class="btn-share  btn-share-twitter" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
+            <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
+        </div>
+    </header>
+    <footer>
+    </footer>
+    <script type="text/javascript" src="js/Chart.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+</body>
 </html>
