incluyendo paleta de colores

--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="txt-color  title-size  margin-y0  bold">Bislai</h1>
-        <p class="bold">Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span>
-        <div class="compartir">
-            <a class="btn-share  btn-share-twitter" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
+    <header class="font-0">
+        <h1 class="txt-color  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai</h1>
+        <div class="display-ib  vertical-am  w-50  texta-r">
+            <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
             <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
         </div>
+        <p class="bold">Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span>
     </header>
+
+    <section>
+
+      <h2>Votaciones</h2>
+
+    </section>
     <footer>
     </footer>
     <script type="text/javascript" src="js/Chart.min.js"></script>
