primera grafica de ejemplo con chart.js

--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script type="text/javascript" src="js/Chart.min.js"></script>
 </head>
 
 <body>
     <div class="container">
       <header class="font-0">
-          <h1 class="txt-color  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai
-          <p class="margin-y0  font-1">Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span></h1>
+          <h1 class="heath  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai
+          <p class="margin-y0  font-1">Como gestionan tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span></h1>
           <div class="display-ib  vertical-am  w-50  texta-r">
               <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
               <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
           </div>
-
       </header>
 
-      <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza.
+      <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
       </p>
 
-      <p class="font-1">Todos los datos han sido obtenidos de la web del Ayuntamiento de Zaragoza.</p>
+      <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+
+      <canvas id="myChart" width="400" height="400"></canvas>
 
       <section>
 
@@ -35,7 +37,6 @@
       <footer>
       </footer>
     </div>
-    <script type="text/javascript" src="js/Chart.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
