--- a/zec.html
+++ b/zec.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="js/Chart.min.js"></script>
 </head>
 
-<body class="cruise">
+<body class="cruise2">
     <div class="container">
       <header class="font-0">
           <h1 class="heath  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai
@@ -22,25 +22,14 @@
           </div>
       </header>
 
-      <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
+      <p class="font-1">A continuación un gráfico de las votaciones de Zaragoza en común en el Ayuntamiento de Zaragoza.
       </p>
 
-      <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+      <canvas id="zec" width="400" height="400"></canvas>
 
-      <!-- <canvas id="myChart" width="400" height="400"></canvas> -->
-
-      <section>
-
-        <h2 class="border-b  padding-b1">Votaciones</h2>
-
-        <article>
-          <h3>Acuerdo del pleno extraordinario del 01/07/2016</h3>
-        </article>
-
-      </section>
       <footer>
       </footer>
     </div>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/zec.js"></script>
 </body>
 </html>
