incluida toda la paleta de colores en la grafica

--- a/zec.html
+++ b/zec.html
@@ -22,7 +22,7 @@
           </div>
       </header>
 
-      <p class="font-1">A continuación un gráfico de las votaciones de Zaragoza en común en el Ayuntamiento de Zaragoza.
+      <p class="font-1">A continuación un gráfico de las votaciones de <span class="font-w8">Zaragoza en común</span> en el Ayuntamiento de Zaragoza.
       </p>
 
       <canvas id="zec" width="400" height="400"></canvas>
