--- a/cha.html
+++ b/cha.html
@@ -22,7 +22,7 @@
           </div>
       </header>
 
-      <p class="font-1">A continuación un gráfico de las votaciones de <span class="font-w8">Zaragoza En Común</span> en el Ayuntamiento de Zaragoza.
+      <p class="font-1">A continuación un gráfico de las votaciones de <span class="font-w8">Chunta Aragonesista</span> en el Ayuntamiento de Zaragoza.
       </p>
 
       <canvas id="zec" width="400" height="400"></canvas>
@@ -30,6 +30,6 @@
       <footer>
       </footer>
     </div>
-    <script type="text/javascript" src="js/zec.js"></script>
+    <script type="text/javascript" src="js/pp.js"></script>
 </body>
 </html>
