--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
           </div>
       </header>
 
+      <div>
+        <img class="object-fit w-10" src="img/logo-zec.jpg" alt="Logotipo de Zaragoza En Común">
+        <img class="object-fit w-10" src="img/logo-pp.jpg" alt="Logotipo del Partido Popular">
+        <img class="object-fit w-10" src="img/psoe.jpg" alt="Logotipo de Partido Socialista Obrero Español">
+        <img class="object-fit w-10" src="img/logo-cs.png" alt="Logotipo de Ciudadanos - Partido de la ciudadanía">
+        <img class="object-fit w-10" src="img/logo-chunta.jpg" alt="Logotipo de Chunta Aragonesista">
+      </div>
+
       <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
       </p>
 
