--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
               <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
           </div>
       </header>
+      <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
+      </p>
+
+      <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+
+      <article class="margin-y1 display-ib">
+        <h4 class="margin-y0  ">Así vota cada partido</h2>
+        <ul>
+          <a class="display-b" href="#">Partido Popular</a>
+          <a class="display-b" href="#">Zaragoza En Común</a>
+          <a class="display-b" href="#">Partido Sociaasta Obrero Español</a>
+          <a class="display-b" href="#">Ciudadanos - Partido de la ciudadanía</a>
+          <a class="display-b" href="#">Chunta Aragonesista</a>
+        </ul>
+      </article>
 
       <div>
         <img class="object-fit w-10" src="img/logo-zec.jpg" alt="Logotipo de Zaragoza En Común">
@@ -29,11 +44,6 @@
         <img class="object-fit w-10" src="img/logo-cs.png" alt="Logotipo de Ciudadanos - Partido de la ciudadanía">
         <img class="object-fit w-10" src="img/logo-chunta.jpg" alt="Logotipo de Chunta Aragonesista">
       </div>
-
-      <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
-      </p>
-
-      <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
 
       <!-- <canvas id="myChart" width="400" height="400"></canvas> -->
 
