ajustando todos los logos a la misma altura

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       </article>
 
       <div>
-        <img class="object-fit w-10" src="img/logo-zec.jpg" alt="Logotipo de Zaragoza En Común">
-        <img class="object-fit w-10" src="img/logo-pp.jpg" alt="Logotipo del Partido Popular">
-        <img class="object-fit w-10" src="img/psoe.jpg" alt="Logotipo de Partido Socialista Obrero Español">
+        <img class="object-fit w-10" src="img/logo-zec.png" alt="Logotipo de Zaragoza En Común">
+        <img class="object-fit w-10" src="img/logo-pp.png" alt="Logotipo del Partido Popular">
+        <img class="object-fit w-10" src="img/logo-psoe.png" alt="Logotipo de Partido Socialista Obrero Español">
         <img class="object-fit w-10" src="img/logo-cs.png" alt="Logotipo de Ciudadanos - Partido de la ciudadanía">
-        <img class="object-fit w-10" src="img/logo-chunta.jpg" alt="Logotipo de Chunta Aragonesista">
+        <img class="object-fit w-10" src="img/logo-chunta.png" alt="Logotipo de Chunta Aragonesista">
       </div>
 
       <!-- <canvas id="myChart" width="400" height="400"></canvas> -->
