incluyendo logos en cada pagina

--- a/cha.html
+++ b/cha.html
@@ -22,6 +22,7 @@
           </div>
       </header>
 
+      <img class="object-fit" src="img/logo-chunta.png" alt="Logotipo de Chunta Aragonesista">
       <p class="font-1">A continuación un gráfico de las votaciones de <span class="font-w8">Chunta Aragonesista</span> en el Ayuntamiento de Zaragoza.
       </p>
 
