--- a/cs.html
+++ b/cs.html
@@ -22,6 +22,7 @@
           </div>
       </header>
 
+      <img class="object-fit" src="img/logo-cs.png" alt="Logotipo de Ciudadanos - Partido de la ciudadanía">
       <p class="font-1">A continuación un gráfico de las votaciones de <span class="font-w8">Ciudadanos - Partido de la Ciudadanía</span> en el Ayuntamiento de Zaragoza.
       </p>
 
