--- a/pp.html
+++ b/pp.html
@@ -21,7 +21,7 @@
               <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
           </div>
       </header>
-
+      <img class="object-fit" src="img/logo-pp.png" alt="Logotipo del Partido Popular">
       <p class="font-1">A continuación un gráfico de las votaciones del <span class="font-w8">Partido Popular</span> en el Ayuntamiento de Zaragoza.
       </p>
 
