--- a/psoe.html
+++ b/psoe.html
@@ -22,6 +22,7 @@
           </div>
       </header>
 
+      <img class="object-fit" src="img/logo-psoe.png" alt="Logotipo de Partido Socialista Obrero Español">
       <p class="font-1">A continuación un gráfico de las votaciones del <span class="font-w8">Partido Socialista Obrero Español</span> en el Ayuntamiento de Zaragoza.
       </p>
 
