--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <article class="margin-y1 display-ib">
         <h4 class="margin-y0  ">Así vota cada partido</h2>
         <ul>
-          <a class="display-ib  textd-n  black  font-w8  padding-1  border1 borderc-black" href="#">Partido Popular</a>
-          <a class="display-ib  textd-n  black  font-w8  padding-1  border1 borderc-black" href="#">Zaragoza En Común</a>
-          <a class="display-ib  textd-n  black  font-w8  padding-1  border1 borderc-black" href="#">Partido Sociaasta Obrero Español</a>
-          <a class="display-ib  textd-n  black  font-w8  padding-1  border1 borderc-black" href="#">Ciudadanos - Partido de la ciudadanía</a>
-          <a class="display-ib  textd-n  black  font-w8  padding-1  border1 borderc-black" href="#">Chunta Aragonesista</a>
+          <a class="display-b  textd-n  black  font-w8  padding-1  border-l5  borderc-pp" href="#">Partido Popular</a>
+          <a class="display-b  textd-n  black  font-w8  padding-1  border-l5  borderc-zec" href="#">Zaragoza En Común</a>
+          <a class="display-b  textd-n  black  font-w8  padding-1  border-l5  borderc-psoe" href="#">Partido Sociaasta Obrero Español</a>
+          <a class="display-b  textd-n  black  font-w8  padding-1  border-l5  borderc-cs" href="#">Ciudadanos - Partido de la ciudadanía</a>
+          <a class="display-b  textd-n  black  font-w8  padding-1  border-l5  borderc-ch" href="#">Chunta Aragonesista</a>
         </ul>
       </article>
 
