cambios en html y css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
           <a href="partidos/pp.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-pp" href="#">Partido Popular</a>
           <a href="partidos/zec.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-zec" href="#">Zaragoza En Común</a>
-          <a href="partidos/psoe.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-psoe" href="#">Partido Sociaasta Obrero Español</a>
+          <a href="partidos/psoe.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-psoe" href="#">Partido Socialista Obrero Español</a>
           <a href="partidos/cs.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-cs" href="#">Ciudadanos - Partido de la ciudadanía</a>
           <a href="partidos/cha.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-ch" href="#">Chunta Aragonesista</a>
         </ul>
