--- a/partidos/zec.html
+++ b/partidos/zec.html
@@ -7,8 +7,8 @@
     <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script type="text/javascript" src="js/Chart.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <script type="text/javascript" src="../js/Chart.min.js"></script>
 </head>
 
 <body class="cruise2">
@@ -31,6 +31,6 @@
       <footer>
       </footer>
     </div>
-    <script type="text/javascript" src="js/zec.js"></script>
+    <script type="text/javascript" src="../js/zec.js"></script>
 </body>
 </html>
