--- a/partidos/cha.html
+++ b/partidos/cha.html
@@ -7,7 +7,7 @@
     <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <script type="text/javascript" src="js/Chart.min.js"></script>
 </head>
 
