modificando rutas e incluyendo nuevo js

--- a/partidos/cha.html
+++ b/partidos/cha.html
@@ -22,7 +22,7 @@
           </div>
       </header>
 
-      <img class="object-fit" src="img/logo-chunta.png" alt="Logotipo de Chunta Aragonesista">
+      <img class="object-fit" src="../img/logo-chunta.png" alt="Logotipo de Chunta Aragonesista">
       <p class="font-1">A continuación un gráfico de las votaciones de <span class="font-w8">Chunta Aragonesista</span> en el Ayuntamiento de Zaragoza.
       </p>
 
@@ -31,6 +31,6 @@
       <footer>
       </footer>
     </div>
-    <script type="text/javascript" src="js/pp.js"></script>
+    <script type="text/javascript" src="../js/cha.js"></script>
 </body>
 </html>
