--- a/partidos/pp.html
+++ b/partidos/pp.html
@@ -7,7 +7,7 @@
     <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <script type="text/javascript" src="js/Chart.min.js"></script>
 </head>
 
@@ -15,13 +15,13 @@
     <div class="container">
       <header class="font-0">
           <h1 class="heath  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai
-          <p class="margin-y0  font-1  whs-nw">Como gestionan tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span></h1>
+          <p class="margin-y0  font-1  whs-nw  margin-t-2">Como gestionan tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span></h1>
           <div class="display-ib  vertical-am  w-50  texta-r">
               <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
               <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
           </div>
       </header>
-      <img class="object-fit" src="img/logo-pp.png" alt="Logotipo del Partido Popular">
+      <img class="object-fit" src="../img/logo-pp.png" alt="Logotipo del Partido Popular">
       <p class="font-1">A continuación un gráfico de las votaciones del <span class="font-w8">Partido Popular</span> en el Ayuntamiento de Zaragoza.
       </p>
 
@@ -30,6 +30,6 @@
       <footer>
       </footer>
     </div>
-    <script type="text/javascript" src="js/pp.js"></script>
+    <script type="text/javascript" src="../js/pp.js"></script>
 </body>
 </html>
