--- a/partidos/psoe.html
+++ b/partidos/psoe.html
@@ -22,7 +22,7 @@
           </div>
       </header>
 
-      <img class="object-fit" src="img/logo-psoe.png" alt="Logotipo de Partido Socialista Obrero Español">
+      <img class="object-fit" src="../img/logo-psoe.png" alt="Logotipo de Partido Socialista Obrero Español">
       <p class="font-1">A continuación un gráfico de las votaciones del <span class="font-w8">Partido Socialista Obrero Español</span> en el Ayuntamiento de Zaragoza.
       </p>
 
@@ -31,6 +31,6 @@
       <footer>
       </footer>
     </div>
-    <script type="text/javascript" src="../js/pp.js"></script>
+    <script type="text/javascript" src="../js/psoe.js"></script>
 </body>
 </html>
