--- a/partidos/zec.html
+++ b/partidos/zec.html
@@ -22,7 +22,7 @@
           </div>
       </header>
 
-      <img class="object-fit" src="img/logo-zec.png" alt="Logotipo de Zaragoza En Común">
+      <img class="object-fit" src="../img/logo-zec.png" alt="Logotipo de Zaragoza En Común">
       <p class="font-1">A continuación un gráfico de las votaciones de <span class="font-w8">Zaragoza En Común</span> en el Ayuntamiento de Zaragoza.
       </p>
 
