--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <header class="font-0">
           <h1 class="heath  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai
-          <p class="margin-y0  font-1  whs-nw">Como gestionan tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span></h1>
+          <p class="margin-y0  font-1  whs-nw margin-t-2">Como gestionan tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span></h1>
           <div class="display-ib  vertical-am  w-50  texta-r">
               <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
               <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
