--- a/partidos/cs.html
+++ b/partidos/cs.html
@@ -22,7 +22,7 @@
           </div>
       </header>
 
-      <img class="object-fit" src="img/logo-cs.png" alt="Logotipo de Ciudadanos - Partido de la ciudadanía">
+      <img class="object-fit" src="../img/logo-cs.png" alt="Logotipo de Ciudadanos - Partido de la ciudadanía">
       <p class="font-1">A continuación un gráfico de las votaciones de <span class="font-w8">Ciudadanos - Partido de la Ciudadanía</span> en el Ayuntamiento de Zaragoza.
       </p>
 
@@ -31,6 +31,6 @@
       <footer>
       </footer>
     </div>
-    <script type="text/javascript" src="js/pp.js"></script>
+    <script type="text/javascript" src="../js/cs.js"></script>
 </body>
 </html>
