--- a/partidos/cs.html
+++ b/partidos/cs.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <script type="text/javascript" src="js/Chart.min.js"></script>
+    <script type="text/javascript" src="../js/Chart.min.js"></script>
 </head>
 
 <body class="cruise2">
