--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <article class="margin-y1 display-ib">
         <h4 class="margin-y0  ">Así vota cada partido</h2>
         <ul>
-          <a href="partidos/pp.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-pp" href="#">Partido Popular</a>
-          <a href="partidos/zec.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-zec" href="#">Zaragoza En Común</a>
-          <a href="partidos/psoe.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-psoe" href="#">Partido Socialista Obrero Español</a>
-          <a href="partidos/cs.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-cs" href="#">Ciudadanos - Partido de la ciudadanía</a>
-          <a href="partidos/cha.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-ch" href="#">Chunta Aragonesista</a>
+          <a href="partidos/pp.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-pp" href="#">Partido Popular 10  87554 26.88 %</a>
+          <a href="partidos/zec.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-zec" href="#">Zaragoza En Común 9 80040 24.57 %</a>
+          <a href="partidos/psoe.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-psoe" href="#">Partido Socialista Obrero Español 6 60746 18.65 %</a>
+          <a href="partidos/cs.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-cs" href="#">Ciudadanos - Partido de la ciudadanía 4 40046 12.29 %</a>
+          <a href="partidos/cha.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-ch" href="#">Chunta Aragonesista 2  22076 6.78 %</a>
         </ul>
       </article>
 
