incluyendo animaciones con mo.js

--- a/index.html
+++ b/index.html
@@ -13,31 +13,46 @@
 
 <body class="cruise">
     <div class="container">
-      <header class="font-0">
-          <h1 class="heath  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai
+        <header class="font-0">
+            <h1 class="heath  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai
           <p class="margin-y0  font-1  whs-nw margin-t-2">Como gestionan tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span></h1>
-          <div class="display-ib  vertical-am  w-50  texta-r">
-              <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
-              <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
+            <div class="display-ib  vertical-am  w-50  texta-r">
+                <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://jorgeatgu.com/bislai/&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
+                <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://jorgeatgu.com/bislai/" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
+            </div>
+        </header>
+        <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
+        </p>
+        <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+        <article class="margin-y1 display-ib  w-100">
+            <h4 class="margin-y0  ">Así vota cada partido</h2>
+          <div class="display-b w-100">
+            <a href="partidos/pp.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PP</a>
+            <div id="pp" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-pp  margin-r1"></div>
+            <span class="black  font-w8">26.88 %</span>
           </div>
-      </header>
-      <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
-      </p>
-
-      <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
-
-      <article class="margin-y1 display-ib">
-        <h4 class="margin-y0  ">Así vota cada partido</h2>
-        <ul>
-          <a href="partidos/pp.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-pp" href="#">Partido Popular 10  87554 26.88 %</a>
-          <a href="partidos/zec.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-zec" href="#">Zaragoza En Común 9 80040 24.57 %</a>
-          <a href="partidos/psoe.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-psoe" href="#">Partido Socialista Obrero Español 6 60746 18.65 %</a>
-          <a href="partidos/cs.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-cs" href="#">Ciudadanos - Partido de la ciudadanía 4 40046 12.29 %</a>
-          <a href="partidos/cha.html" class="display-b  margin-t1  textd-n  black  font-w8  padding-1  border-l5  borderc-ch" href="#">Chunta Aragonesista 2  22076 6.78 %</a>
-        </ul>
+          <div class="display-b w-100">
+          <a href="partidos/zec.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">ZEC</a>
+          <div id="zec" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-zec  margin-r1"></div>
+          <span class="black  font-w8">24.57 %</span>
+          </div>
+          <div class="display-b w-100">
+          <a href="partidos/psoe.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PSOE</a>
+          <div id="psoe" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-psoe  margin-r1"></div>
+          <span class="black  font-w8">18.65 %</span>
+          </div>
+          <div class="display-b w-100">
+          <a href="partidos/cs.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">C'S</a>
+          <div id="cs" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cs  margin-r1"></div>
+          <span class="black  font-w8">12.29%</span>
+          </div>
+          <div class="display-b w-100">
+          <a href="partidos/cha.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">CHA</a>
+          <div id="cha" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cha  margin-r1"></div>
+          <span class="black  font-w8">6.78%</span>
+          </div>
       </article>
 
-      <!-- <canvas id="myChart" width="400" height="400"></canvas> -->
 
       <section>
 
@@ -45,12 +60,14 @@
 
         <article>
           <h3>Acuerdo del pleno extraordinario del 01/07/2016</h3>
+      <canvas id="myChart" width="250" height="250"></canvas>
         </article>
 
       </section>
       <footer>
       </footer>
     </div>
+    <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
