haciendo las gráficas con CSS sin animaciones

--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
         <article>
           <h3>Acuerdo del pleno extraordinario del 01/07/2016</h3>
       <canvas id="myChart" width="250" height="250"></canvas>
+          <article class="grafica font-0 w-100">
+            <p class="w-50 display-ib  margin-y0  font-2  border-b5  borderc-black">A favor: <span class="font-w8">20</span></p>
+            <p class="w-50 display-ib  margin-y0  font-2  texta-r  border-b5  borderc-black  border-l5">En contra: <span class="font-w8">10</span></p>
+            <div class="w-50  h-24  display-ib pos-r">
+                <div class="pos-a rt-0 tp-2 display-ib w-100 clearfix">
+                  <div class="w-30 texta-c padding-2 bgc-pp display-ib  white font-1 fl-r">PP</div>
+                  <div class="w-30 texta-c padding-2 bgc-psoe display-ib  white font-1 fl-r">PSOE</div>
+                </div>
+            </div>
+
+            <div class="w-50  h-24  display-ib pos-r border-l5  borderc-black">
+                <div class="pos-a rt-0 tp-5 display-ib w-100 clearfix">
+                  <div class="w-30 texta-c padding-2 bgc-cha display-ib  white font-1 fl-l">CHA</div>
+                  <div class="w-30 texta-c padding-2 bgc-zec display-ib  white font-1 fl-l">ZEC</div>
+                </div>
+            </div>
+            <p class="w-40 display-b  margin-yx  font-2  texta-c  border-t5  borderc-black">Abstención: <span class="font-w8">10</span></p>
+          </article>
         </article>
 
       </section>
