--- a/index.html
+++ b/index.html
@@ -66,18 +66,20 @@
             <p class="w-50 display-ib  margin-y0  font-2  texta-r  border-b5  borderc-black  border-l5">En contra: <span class="font-w8">10</span></p>
             <div class="w-50  h-24  display-ib pos-r">
                 <div class="pos-a rt-0 tp-2 display-ib w-100 clearfix">
-                  <div class="w-30 texta-c padding-2 bgc-pp display-ib  white font-1 fl-r">PP</div>
-                  <div class="w-30 texta-c padding-2 bgc-psoe display-ib  white font-1 fl-r">PSOE</div>
+                  <div class="w-pp texta-c padding-2 bgc-pp display-ib  white font-1 fl-r font-w8">PP</div>
+                  <div class="w-psoe texta-c padding-2 bgc-psoe display-ib  white font-1 fl-r  font-w8">PSOE</div>
                 </div>
             </div>
 
             <div class="w-50  h-24  display-ib pos-r border-l5  borderc-black">
                 <div class="pos-a rt-0 tp-5 display-ib w-100 clearfix">
-                  <div class="w-30 texta-c padding-2 bgc-cha display-ib  white font-1 fl-l">CHA</div>
-                  <div class="w-30 texta-c padding-2 bgc-zec display-ib  white font-1 fl-l">ZEC</div>
+                  <div class="w-cha texta-c padding-2-0 bgc-cha display-ib  white font-1 fl-l  font-w8">CHA</div>
+                  <div class="w-zec texta-c padding-2 bgc-zec display-ib  white font-1 fl-l  font-w8">ZEC</div>
                 </div>
             </div>
             <p class="w-40 display-b  margin-yx  font-2  texta-c  border-t5  borderc-black">Abstención: <span class="font-w8">10</span></p>
+
+            <div class="w-cs texta-c padding-2 bgc-cs margin-yx  margin-y1  white font-1 font-w8">C'S</div>
           </article>
         </article>
 
