eliminando graficas por CSS y con Chart

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
         <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
         <article class="margin-y1 display-ib  w-100">
-            <h4 class="margin-y0  ">Así vota cada partido</h2>
+            <h4 class="margin-y0">Resultados de las elecciones al Ayuntamiento de Zaragoza 2015</h2>
           <div class="display-b w-100">
             <a href="partidos/pp.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PP</a>
             <div id="pp" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-pp  margin-r1"></div>
@@ -60,27 +60,6 @@
 
         <article>
           <h3>Acuerdo del pleno extraordinario del 01/07/2016</h3>
-      <canvas id="myChart" width="250" height="250"></canvas>
-          <article class="grafica font-0 w-100">
-            <p class="w-50 display-ib  margin-y0  font-2  border-b5  borderc-black">A favor: <span class="font-w8">20</span></p>
-            <p class="w-50 display-ib  margin-y0  font-2  texta-r  border-b5  borderc-black  border-l5">En contra: <span class="font-w8">10</span></p>
-            <div class="w-50  h-24  display-ib pos-r">
-                <div class="pos-a rt-0 tp-2 display-ib w-100 clearfix">
-                  <div class="w-pp texta-c padding-2 bgc-pp display-ib  white font-1 fl-r font-w8">PP</div>
-                  <div class="w-psoe texta-c padding-2 bgc-psoe display-ib  white font-1 fl-r  font-w8">PSOE</div>
-                </div>
-            </div>
-
-            <div class="w-50  h-24  display-ib pos-r border-l5  borderc-black">
-                <div class="pos-a rt-0 tp-5 display-ib w-100 clearfix">
-                  <div class="w-cha texta-c padding-2-0 bgc-cha display-ib  white font-1 fl-l  font-w8">CHA</div>
-                  <div class="w-zec texta-c padding-2 bgc-zec display-ib  white font-1 fl-l  font-w8">ZEC</div>
-                </div>
-            </div>
-            <p class="w-40 display-b  margin-yx  font-2  texta-c  border-t5  borderc-black">Abstención: <span class="font-w8">10</span></p>
-
-            <div class="w-cs texta-c padding-2 bgc-cs margin-yx  margin-y1  white font-1 font-w8">C'S</div>
-          </article>
         </article>
 
       </section>
