--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
 
         <article>
           <h3>Acuerdo del pleno extraordinario del 01/07/2016</h3>
+          <div id="chart"></div>
         </article>
 
       </section>
       <footer>
       </footer>
     </div>
+    <script type="text/javascript" src="js/d3.min.js"></script>
+    <script type="text/javascript" src="js/c3.min.js"></script>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
