CSS :neckbeard: :point_up_2:

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
       <section>
 
-        <h2 class="border-b  padding-b1">Votaciones</h2>
+        <h2 class="border-t  padding-t1 border-b  padding-b1 display-ib font-4 margin-b0">Plenos del 2016</h2>
 
         <article>
           <h3>Acuerdo del pleno extraordinario del 01/07/2016</h3>
-          <div id="chart"></div>
+          <!-- <div id="chart"></div> -->
         </article>
 
       </section>
