--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
     <link rel="stylesheet" type="text/css" href="css/c3.min.css">
 </head>
 
-<body class="cruise">
-    <div class="container">
-        <header class="font-0">
-            <h1 class="heath  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai
-          <p class="margin-y0  font-1  whs-nw margin-t-2">Como gestionan tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span></h1>
-            <div class="display-ib  vertical-am  w-50  texta-r">
-                <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
-                <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
-            </div>
-        </header>
-        <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
-        </p>
-        <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
-        <article class="margin-y1 display-ib  w-100">
-            <h4 class="margin-y0">Resultados de las elecciones al Ayuntamiento de Zaragoza 2015</h2>
+<body>
+    <header class="font-0 border-b1 borderc-rojo w-100">
+          <div class="maw-70">
+            <a href="http://bislai.co" class="textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
+            <div>
+              <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
+              <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
+          </div>
+          </div>
+    </header>
+    <div class="maw-70">
+      <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
+      </p>
+      <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+    <article class="margin-y1 display-ib  w-100">
+        <h4 class="margin-y0">Resultados de las elecciones al Ayuntamiento de Zaragoza 2015</h2>
           <div class="display-b w-100">
             <a href="partidos/pp.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PP</a>
             <div id="pp" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-pp  margin-r1"></div>
@@ -52,11 +53,14 @@
           <span class="black  font-w8">6.78% · 2 concejales</span>
           </div>
       </article>
+      </div>
 
 
       <section>
 
-        <h2 class="border-t  padding-t1 border-b  padding-b1 display-ib font-4 margin-b0">Plenos del 2016</h2>
+        <div class="border-t1  padding-t1 border-b1  padding-b1 borderc-grey">
+          <h2 class="font-4 margin-b0  maw-70">Plenos del 2016</h2>
+        </div>
 
         <article>
           <h3>Acuerdo del pleno extraordinario del 01/07/2016</h3>
@@ -66,7 +70,6 @@
       </section>
       <footer>
       </footer>
-    </div>
     <script type="text/javascript" src="js/d3.min.js"></script>
     <script type="text/javascript" src="js/c3.min.js"></script>
     <script type="text/javascript" src="js/mo.min.js"></script>
