CSS :neckbeard: :point_up_2:

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 </head>
 
 <body>
-    <header class="font-0 border-b1 borderc-rojo w-100">
+    <header class="font-0 border-b1 borderc-grey w-100 padding-b1">
           <div class="maw-70">
-            <a href="http://bislai.co" class="textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
+            <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
+            <div class="w-50 display-ib texta-r">
+              <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
+              <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r">Facebook</a>
+            </div>
             <div>
               <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
               <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
