creando el primer ejemplo de plantilla para plenos

--- a/plenos/23-12-2016.html
+++ b/plenos/23-12-2016.html
@@ -21,9 +21,27 @@
             </div>
           </div>
     </header>
+
+    <section class="maw-70 margin-y1 display-b">
+      <a class="display-b margin-b1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=651">Orden del día</a>
+      <a class="display-b" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=651">Orden del día</a>
+
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70">
+        <h3>Moción 10 · <span class="bgc-cs padding-1 white">Presentada por Ciudadanos</span></h3>
+
+        <p>Impulsar medidas para facilitar el relevo generacional de los autónomos y el mantenimiento de la actividad y el empleo en negocios sin sucesión empresarial</p>
+
+        <div id="chart"></div>
+      </article>
+    </section>
+
       <footer>
       </footer>
     <script type="text/javascript" src="../js/d3.min.js"></script>
     <script type="text/javascript" src="../js/c3.min.js"></script>
+    <script type="text/javascript" src="../js/23-12-2016.js"></script>
 </body>
 </html>
