--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <article>
           <h3>Acuerdo del pleno extraordinario del 01/07/2016</h3>
-          <!-- <div id="chart"></div> -->
+          <div id="chart"></div>
           <a href="">Pleno del 23 del 12 de 2016</a>
         </article>
 
