puliendo la plantilla de los plenos :triumph:

--- a/plenos/23-12-2016.html
+++ b/plenos/23-12-2016.html
@@ -23,16 +23,20 @@
     </header>
 
     <section class="maw-70 margin-y1 display-b">
-      <a class="display-b margin-b1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=651">Orden del día</a>
-      <a class="display-b" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=651">Orden del día</a>
+      <a class="padding-r1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=651">Orden del día</a>
+      <a href="https://www.zaragoza.es/ciudad/organizacion/detalleAnexo_AgendaInstitucional?id=671">Acuerdos</a>
 
+      <div class="margin-y1">
+        <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=jorgeATGU&related=jorgeATGU" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
+                 <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
+      </div>
     </section>
 
     <section class="border-t1 borderc-grey w-100">
-      <article class="maw-70">
+      <article class="maw-70 padding-1-0">
         <h3>Moción 10 · <span class="bgc-cs padding-1 white">Presentada por Ciudadanos</span></h3>
 
-        <p>Impulsar medidas para facilitar el relevo generacional de los autónomos y el mantenimiento de la actividad y el empleo en negocios sin sucesión empresarial</p>
+        <p class="padding-1-0">Impulsar medidas para facilitar el relevo generacional de los autónomos y el mantenimiento de la actividad y el empleo en negocios sin sucesión empresarial</p>
 
         <div id="chart"></div>
       </article>
