--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="font-0 border-b1 borderc-grey w-100 padding-b1">
+    <header class="font-0 border-b1 borderc-grey w-100">
           <div class="maw-70">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
             <div class="w-50 display-ib texta-r">
