--- a/plenos/23-12-2016.html
+++ b/plenos/23-12-2016.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="font-0 border-b1 borderc-grey w-100 padding-b1">
+    <header class="font-0 border-b1 borderc-grey w-100">
           <div class="maw-70">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
             <div class="w-50 display-ib texta-r">
@@ -34,11 +34,152 @@
 
     <section class="border-t1 borderc-grey w-100">
       <article class="maw-70 padding-1-0">
-        <h3>Moción 10 · <span class="bgc-cs padding-1 white">Presentada por Ciudadanos</span></h3>
+        <h3 class="border-t10 border-b10 borderc-cs padding-1-0 display-ib margin-b0">Moción 10 · Presentada por Ciudadanos</h3>
 
-        <p class="padding-1-0">Impulsar medidas para facilitar el relevo generacional de los autónomos y el mantenimiento de la actividad y el empleo en negocios sin sucesión empresarial</p>
+        <p class="padding-1-0">Impulsar medidas para facilitar el relevo generacional de los autónomos y el mantenimiento de la actividad y el empleo en negocios sin sucesión empresarial.</p>
 
-        <div id="chart"></div>
+        <div id="mocion10"></div>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-ch padding-1-0 display-ib margin-b0">Moción 11 · Presentada por Chunta Aragonesista</h3>
+
+        <p class="padding-1-0">Estudiar la posibilidad de instalar azoteas verdes en edificios municipales.</p>
+
+        <div id="mocion11"></div>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0">Moción 12 · Presentada por el Partido Popular</h3>
+
+        <p class="padding-1-0">Promover y liderar la creación de un grupo de trabajo con el objetivo de abrir un debate sobre el futuro urbanístico de la ciudad y su planificación en torno a la movilidad, la regeneración y rehabilitación urbana y la sostenibilidad medioambiental y económica.</p>
+
+        <div id="mocion12"></div>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 13 · Presentada por el Partido Socialista Obrero Español</h3>
+
+        <p class="padding-1-0">Instar al gobierno de Zaragoza a consignar en los próximos presupuestos partidas equivalentes a los ahorros generados en gasto energético para la sustitución de luminarias tradicionales por luminarias led.
+        </p>
+
+        <div id="mocion13"></div>
+
+
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 14 · Presentada por el Partido Socialista Obrero Español</h3>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 1.</span>Instar al Gobierno de Zaragoza a consignar en los próximos presupuestos, bien a través de proyecto, bien a través del trámite de enmiendas, partidas por valor de 3,1 millones de euros, equivalentes a los ahorros generados en gasto energético para la sustitución de luminarias tradicionales por luminarias LED de última tecnología con conexión punto a punto.</p>
+
+        <div id="mocion14"></div>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 2.</span>Avanzar decididamente hacia la descentralización administrativa, a través de Oficinas de Gestión Integradas en los Distritos o en otras fórmulas que puedan agrupar a éstos, que permitan incrementar el número de trámites y actuaciones susceptibles de ser realizadas en dichas oficinas. Para ello será imprescindible agilizar los trámites para la reforma del Reglamento de Participación Ciudadana.</p>
+
+        <div id="mocion14-2"></div>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 3.</span>Incrementar el catálogo de trámites susceptibles de realización online así como a desarrollar sistemas de notificación y gestión electrónica.</p>
+
+        <div id="mocion14-3"></div>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 15 · Presentada por el Partido Socialista Obrero Español</h3>
+
+        <p class="padding-1-0">Instar al Gobierno central para que permita que las entidades locales reinviertan su superávit en 2017 sin necesidad de generar nuevos ingresos por el mismo importe, a través de una autorización legal que surja de la prórroga de los presupuestos generales del Estado.
+
+        <span class="font-w8 display-b margin-t1">Retirada del orden del día por el grupo proponente</span>
+        </p>
+
+
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0">Moción 16 · Presentada por el Partido Popular</h3>
+
+        <p class="padding-1-0">Instar al gobierno municipal a introducir en el sistema tarifario del transporte público de 2017 la gratuidad del billete para los menores de 7 años y bonificaciones sustanciales para los jóvenes entre 8 y 18 años .
+
+        <div id="mocion16"></div>
+        </p>
+
+
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0">Moción 17 · Presentada por el Partido Popular</h3>
+
+        <p class="padding-1-0"><span class="font-w8 display-b margin-b1">Punto 1.</span>Instar al Gobierno de la ciudad a estudiar la implantación del plan renove Zaragoza a lo largo de 2017, para fomentar la renovación del parque automovilístico de la ciudad, orientado a retirar los vehículos más contaminantes.
+
+        <span class="font-w8 display-b margin-t1">Retirada del orden del día por el grupo proponente</span>
+        </p>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0 borderc-b-cs">Moción 18 · Presentada por el Partido Popular y Ciudadanos</h3>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 1.</span>Dejar sin efecto los resultados obtenidos en el proceso participativo relativo a la encuesta sobre el trazado de la línea 2 del tranvía.
+
+        <div id="mocion18"></div>
+        </p>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 2.</span>lndependientemente de dejar sin efecto tales resultados, presentar a los Grupos Políticos un informe de los mismos que permita analizarlos desde diferentes perspectivas.
+
+        <div id="mocion18-2"></div>
+        </p>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 3.</span>lmpulsar de forma urgente la tramitación de la Ordenanza Municipal para la Regulación de los Procesos Participativos según se aprobó en eldebate sobre el Estado de la Ciudad.
+
+        <div id="mocion18-3"></div>
+        </p>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 4.</span>Renunciar a la puesta en marcha de cualquier otro proceso participativo en la Ciudad hasta que no se disponga de la citada Ordenanza Municipal para la Regulación de los Procesos Participativos.
+
+        <div id="mocion18-4"></div>
+        </p>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-cs padding-1-0 display-ib margin-b0">Moción 19 · Presentada por Ciudadanos</h3>
+
+        <p class="padding-1-0">Instar al Gobierno de la ciudad a presentar un informe técnico tanto desde el punto de vista financiero como desde el punto de vista técnico y operativo, antes de cualquier contacto o toma de decisión orientada a la compra de electricidad en el mercado libre mayorista.
+
+        <div id="mocion19"></div>
+        </p>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-ch padding-1-0 display-ib margin-b0">Moción 20 · Presentada por Chunta Aragonesista</h3>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 1.</span>Instar al Gobierno del Estado y a los Grupos Parlamentarios del Congreso a promover una reforma constitucional que garantice la prohibición expresa de recortar o privatizar, total o parcialmente, el Sistema Público de Pensiones, garantizando el mantenimiento del poder adquisitivo de las mismas.
+
+        <div id="mocion20"></div>
+        </p>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 2.</span>Instar al Gobierno del Estado a promover un amplio debate ciudadano y a llegar a un acuerdo en el seno del Pacto de Toledo, que pueda concluir con la celebración de un referéndum donde el conjunto de la sociedad pueda pronunciarse de manera directa y democrática sobre este tema.
+
+        <div id="mocion20-1"></div>
+        </p>
       </article>
     </section>
 
