modificando todos los footer

--- a/partidos/cs.html
+++ b/partidos/cs.html
@@ -29,7 +29,8 @@
 
       <canvas id="zec" width="400" height="400"></canvas>
 
-      <footer>
+      <footer class="margin-y1 borderc-grey border-t1">
+        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com">maño</a> - 2017</p>
       </footer>
     </div>
     <script type="text/javascript" src="../js/cs.js"></script>
