--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         </article>
 
       </section>
-      <footer>
+      <footer class="margin-y1 borderc-grey border-t1">
+        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com">maño</a> - 2017</p>
       </footer>
     <script type="text/javascript" src="js/d3.min.js"></script>
     <script type="text/javascript" src="js/c3.min.js"></script>
